# tic-tac-toe-minimax

./: CMakeLists.txt  README.md
src/: board.cpp  board.h  field.cpp  field.h  game.cpp  game.h  game_state.h  human_player.cpp  human_player.h  invalid_move_exception.cpp  invalid_move_exception.h  main.cpp  mark.cpp  mark.h  minimax_player.cpp  minimax_player.h  move.cpp  move.h  player.cpp  player.h  random_player.cpp  random_player.h
